--- a/openshift/release/knative-eventing-kafka-source-ci.yaml
+++ b/openshift/release/knative-eventing-kafka-source-ci.yaml
@@ -1,25 +1,18 @@
 ---
 apiVersion: v1
-kind: Namespace
-metadata:
-  name: knative-sources
-  labels:
-    contrib.eventing.knative.dev/release: devel
----
-apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: kafka-controller-manager
-  namespace: knative-sources
+  namespace: knative-eventing
   labels:
-    contrib.eventing.knative.dev/release: devel
+    contrib.eventing.knative.dev/release: v0.19.1
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: eventing-sources-kafka-controller
   labels:
-    contrib.eventing.knative.dev/release: devel
+    contrib.eventing.knative.dev/release: v0.19.1
 rules:
 - apiGroups:
   - sources.knative.dev
@@ -125,7 +118,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: eventing-kafka-source-observer
   labels:
-    contrib.eventing.knative.dev/release: devel
+    contrib.eventing.knative.dev/release: v0.19.1
     duck.knative.dev/source: "true"
 rules:
 - apiGroups:
@@ -142,11 +135,11 @@ kind: ClusterRoleBinding
 metadata:
   name: eventing-sources-kafka-controller
   labels:
-    contrib.eventing.knative.dev/release: devel
+    contrib.eventing.knative.dev/release: v0.19.1
 subjects:
 - kind: ServiceAccount
   name: kafka-controller-manager
-  namespace: knative-sources
+  namespace: knative-eventing
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -157,11 +150,11 @@ kind: ClusterRoleBinding
 metadata:
   name: eventing-sources-kafka-controller-addressable-resolver
   labels:
-    contrib.eventing.knative.dev/release: devel
+    contrib.eventing.knative.dev/release: v0.19.1
 subjects:
 - kind: ServiceAccount
   name: kafka-controller-manager
-  namespace: knative-sources
+  namespace: knative-eventing
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -172,11 +165,11 @@ kind: ClusterRoleBinding
 metadata:
   name: eventing-sources-kafka-controller-podspecable-binding
   labels:
-    contrib.eventing.knative.dev/release: devel
+    contrib.eventing.knative.dev/release: v0.19.1
 subjects:
 - kind: ServiceAccount
   name: kafka-controller-manager
-  namespace: knative-sources
+  namespace: knative-eventing
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -186,7 +179,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   labels:
-    contrib.eventing.knative.dev/release: devel
+    contrib.eventing.knative.dev/release: v0.19.1
     duck.knative.dev/binding: "true"
     knative.dev/crd-install: "true"
   name: kafkabindings.bindings.knative.dev
@@ -213,7 +206,7 @@ spec:
     webhookClientConfig:
       service:
         name: kafka-source-webhook
-        namespace: knative-sources
+        namespace: knative-eventing
   additionalPrinterColumns:
     - name: BootstrapServers
       type: string
@@ -239,7 +232,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   labels:
-    contrib.eventing.knative.dev/release: devel
+    contrib.eventing.knative.dev/release: v0.19.1
     eventing.knative.dev/source: "true"
     duck.knative.dev/source: "true"
     knative.dev/crd-install: "true"
@@ -272,7 +265,7 @@ spec:
     webhookClientConfig:
       service:
         name: kafka-source-webhook
-        namespace: knative-sources
+        namespace: knative-eventing
   additionalPrinterColumns:
     - name: Topics
       type: string
@@ -301,9 +294,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kafka-controller
-  namespace: knative-sources
+  namespace: knative-eventing
   labels:
-    contrib.eventing.knative.dev/release: devel
+    contrib.eventing.knative.dev/release: v0.19.1
     control-plane: kafka-controller-manager
 spec:
   selector:
@@ -316,9 +309,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kafka-controller-manager
-  namespace: knative-sources
+  namespace: knative-eventing
   labels:
-    contrib.eventing.knative.dev/release: devel
+    contrib.eventing.knative.dev/release: v0.19.1
     control-plane: kafka-controller-manager
 spec:
   replicas: 1
@@ -370,9 +363,9 @@ kind: Service
 metadata:
   labels:
     role: webhook
-    contrib.eventing.knative.dev/release: devel
+    contrib.eventing.knative.dev/release: v0.19.1
   name: kafka-source-webhook
-  namespace: knative-sources
+  namespace: knative-eventing
 spec:
   ports:
   - name: https-webhook
@@ -386,14 +379,14 @@ kind: MutatingWebhookConfiguration
 metadata:
   name: defaulting.webhook.kafka.sources.knative.dev
   labels:
-    contrib.eventing.knative.dev/release: devel
+    contrib.eventing.knative.dev/release: v0.19.1
 webhooks:
 - admissionReviewVersions:
   - v1beta1
   clientConfig:
     service:
       name: kafka-source-webhook
-      namespace: knative-sources
+      namespace: knative-eventing
   failurePolicy: Fail
   name: defaulting.webhook.kafka.sources.knative.dev
 ---
@@ -402,14 +395,14 @@ kind: MutatingWebhookConfiguration
 metadata:
   name: kafkabindings.webhook.kafka.sources.knative.dev
   labels:
-    contrib.eventing.knative.dev/release: devel
+    contrib.eventing.knative.dev/release: v0.19.1
 webhooks:
 - admissionReviewVersions:
   - v1beta1
   clientConfig:
     service:
       name: kafka-source-webhook
-      namespace: knative-sources
+      namespace: knative-eventing
   failurePolicy: Fail
   name: kafkabindings.webhook.kafka.sources.knative.dev
 ---
@@ -418,14 +411,14 @@ kind: ValidatingWebhookConfiguration
 metadata:
   name: validation.webhook.kafka.sources.knative.dev
   labels:
-    contrib.eventing.knative.dev/release: devel
+    contrib.eventing.knative.dev/release: v0.19.1
 webhooks:
 - admissionReviewVersions:
   - v1beta1
   clientConfig:
     service:
       name: kafka-source-webhook
-      namespace: knative-sources
+      namespace: knative-eventing
   failurePolicy: Fail
   name: validation.webhook.kafka.sources.knative.dev
 ---
@@ -434,14 +427,14 @@ kind: ValidatingWebhookConfiguration
 metadata:
   name: config.webhook.kafka.sources.knative.dev
   labels:
-    contrib.eventing.knative.dev/release: devel
+    contrib.eventing.knative.dev/release: v0.19.1
 webhooks:
 - admissionReviewVersions:
   - v1beta1
   clientConfig:
     service:
       name: kafka-source-webhook
-      namespace: knative-sources
+      namespace: knative-eventing
   failurePolicy: Fail
   name: config.webhook.kafka.sources.knative.dev
   namespaceSelector:
@@ -453,15 +446,15 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: kafka-source-webhook-certs
-  namespace: knative-sources
+  namespace: knative-eventing
   labels:
-    contrib.eventing.knative.dev/release: devel
+    contrib.eventing.knative.dev/release: v0.19.1
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: config-leader-election-kafka
-  namespace: knative-sources
+  namespace: knative-eventing
 data:
   resourceLock: "leases"
   leaseDuration: "15s"
@@ -479,7 +472,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: config-logging
-  namespace: knative-sources
+  namespace: knative-eventing
 data:
   zap-logger-config: |
     {
@@ -509,7 +502,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: config-observability
-  namespace: knative-sources
+  namespace: knative-eventing
 data:
   _example: |
     logging.enable-var-log-collection: false
@@ -565,9 +558,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: config-tracing
-  namespace: knative-sources
+  namespace: knative-eventing
   labels:
-    contrib.eventing.knative.dev/release: devel
+    contrib.eventing.knative.dev/release: v0.19.1
     knative.dev/config-propagation: original
     knative.dev/config-category: eventing
 data:
